--- a/src/styles/tokens/typography.module.scss
+++ b/src/styles/tokens/typography.module.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
+$vh-typography-font-size-xs: 0.5rem;
 $vh-typography-font-size-sm: 0.75rem;
 $vh-typography-font-size-md: 1rem;
 $vh-typography-font-size-lg: 1.5rem;
