--- a/src/styles/tokens/typography.module.scss
+++ b/src/styles/tokens/typography.module.scss
@@ -22,6 +22,7 @@ $vh-typography-font-weight-bold: 900;
 
   font-size: $vh-typography-font-size-md;
   font-weight: $vh-typography-font-weight-base;
+  line-height: $vh-typography-font-size-lg;
 }
 
 @mixin heading-1 {
@@ -43,6 +44,7 @@ $vh-typography-font-weight-bold: 900;
 
   font-size: $vh-typography-font-size-md;
   font-weight: $vh-typography-font-weight-bold;
+  line-height: 1;
 }
 
 @mixin heading-4 {
