chore(site): rebuild

--- a/src/styles/component/header.module.scss
+++ b/src/styles/component/header.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
 
-  .content {
+  .text-content {
     padding: $vh-space-4;
     display: flex;
     box-shadow: none;
